--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "grunt-open": "^0.2.3",
     "grunt-premailer": "^0.2.13",
     "grunt-replace": "^0.9.2",
+    "grunt-tinypng": "^0.5.3",
     "imagemin-mozjpeg": "^5.1.0",
     "load-grunt-tasks": "^3.2.0"
   }
